force-app/main/default/objects/User/fields/FullAccessReqOnRegister__c.field-meta.xml
<CustomField>
    <fullName>FullAccessReqOnRegister__c</fullName>
    <label>FullAccessReqOnRegister</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Access On Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>