force-app/main/default/objects/User/fields/NDIA_PaidRequest__c.field-meta.xml
<CustomField>
    <fullName>NDIA_PaidRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PaidRequest</label>
    <type>Checkbox</type>
</CustomField>