force-app/main/default/objects/User/fields/NDIAFullAccessRequest__c.field-meta.xml
<CustomField>
    <fullName>NDIAFullAccessRequest__c</fullName>
    <label>Full Access Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>