force-app/main/default/objects/User/fields/NDIARequestCheck__c.field-meta.xml
<CustomField>
    <fullName>NDIARequestCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Check</label>
    <type>Checkbox</type>
</CustomField>